--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Scolpit/DevConnectorApp/issues"
   },
-  "homepage": "https://github.com/Scolpit/DevConnectorApp#readme"
+  "homepage": "https://github.com/Scolpit/DevConnectorApp#readme",
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "express": "^4.16.3"
+  }
 }
