--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.16.3",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.2.1",
+    "lodash": "^4.17.10",
+    "lodash.isempty": "^4.4.0",
     "mongoose": "^5.1.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
