--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.17.10",
     "lodash.isempty": "^4.4.0",
     "mongoose": "^5.1.1",
+    "npm": "^6.1.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.2.0"
